syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.app.protobuf";

service Slaughterhouse {
    rpc retrieveRegNums(ProductId) returns(InvolvedAnimals);
    rpc retrieveProdNums(AnimalId) returns(InvolvedProducts);
    rpc createAnimal(AnimalGrpc) returns(AnimalGrpc);
    rpc getAllAnimals(NoParam) returns(ListOfAnimals);
    rpc getById(AnimalId) returns(AnimalGrpc);
    rpc getByOrigin(Origin) returns(ListOfAnimals);
    rpc getByDate(Date) returns(ListOfAnimals);
}

message NoParam {}

message AnimalGrpc {
    int32 regNum = 1;
    string date = 2;
    double weight = 3;
    string origin = 4;
}

message ListOfAnimals {
    repeated AnimalGrpc animals = 1;
}

message Origin {
    string origin = 2;
}

message Date {
    string date = 2;
}

message ProductId {
    int32 idOfProduct = 1;
}

message AnimalId {
    int32 idOfAnimal = 1;
}

message InvolvedAnimals {
    repeated int32 idOfAnimal = 1;
}

message InvolvedProducts {
    repeated int32 idOfProduct = 1;
}